# uniweb-cv-match

./: README.md  app.py  pyproject.toml  requirements.txt  test_results.csv
.streamlit/: config.toml
config/: __init__.py  config.yaml  config_mass.yaml
data/: Backend-разработчик (Node.js).csv  Project менеджер.csv  UX UI дизайнер.csv  vacancies.csv  Директор по маркетингу.csv  Инженер УКВ радиосвязи.csv  Маркетолог.csv  Программист 1С.csv
data_mass/: vacancies.csv  Водитель белаза.csv  Водитель карьерного автосамосвала БелАЗ.csv  Горнорабочий очистного забоя (ученик).csv
model/: __init__.py  model.py  model_mass.py  request_api.py
utils/: enums.py  hardcode_data.py  utils.py
